--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -18,8 +18,8 @@
     under the License.
 -->
 <html>
-    <head>
-        <!--
+  <head>
+    <!--
         Customize this policy to fit your own app's needs. For more guidance, see:
             https://github.com/apache/cordova-plugin-whitelist/blob/master/README.md#content-security-policy
         Some notes:
@@ -28,31 +28,35 @@
             * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
-        <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;"> -->
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' *" />
-        <!-- <meta name="refresh" http-equiv="refresh" content="5"> -->
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;"> -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' *" />
+    <!-- <meta name="refresh" http-equiv="refresh" content="5"> -->
 
-        <meta name="format-detection" content="telephone=no">
-        <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
-        <link rel="stylesheet" type="text/css" href="css/index.css">
-        <title>Hello World</title>
-    </head>
-    <body>
-        <!-- <h1>Apache Cordova</h1>
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <meta
+      name="viewport"
+      content="initial-scale=1, width=device-width, viewport-fit=cover"
+    />
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <title>Hello World</title>
+  </head>
+  <body>
+    <!-- <h1>Apache Cordova</h1>
             <div class="app">
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
             </div>
             </div> -->
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript" src="HedcPlugin.js"></script>
-        <script type="text/javascript" src="js/scanner.js"></script>
-        <!-- <input type="text" id="myText" text=""></input>
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="HedcPlugin.js"></script>
+    <script type="text/javascript" src="js/scanner.js"></script>
+    <!-- <input type="text" id="myText" text=""></input>
         <button id="myButton" title="">Send</button> -->
-        <p>
-        </p>
-    </body>
+    <p>
+      <button id="clickme" value="click me">Click Me</button>
+    </p>
+  </body>
 </html>
